--- a/core-node/quartapp/templates/index.html
+++ b/core-node/quartapp/templates/index.html
@@ -30,6 +30,27 @@
 
 <body id="page-top">
 
+    <!-- Header-->
+    <header class="bg-gradient-primary py-5">
+        <div class="container px-5">
+            <div class="row gx-5 justify-content-center">
+                <div class="col-lg-6">
+                    <div class="text-center my-5">
+                        <h1 class="display-5 fw-bolder text-white mb-2">Welcome to netsumap</h1>
+                        <p class="lead text-white-50 mb-4">
+                            Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!
+                        </p>
+                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Sign Up</a>
+                            <a class="btn btn-outline-light btn-lg px-4" href="#!">Login</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
     <!-- Page Wrapper -->
     <div id="wrapper">
 
@@ -42,24 +63,7 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Header-->
-                    <header class="bg-dark py-5">
-                        <div class="container px-5">
-                            <div class="row gx-5 justify-content-center">
-                                <div class="col-lg-6">
-                                    <div class="text-center my-5">
-                                        <h1 class="display-5 fw-bolder text-white mb-2">Present your business in a whole new way</h1>
-                                        <p class="lead text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-                                        <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
-                                            <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </header>
-
+                    
                     <div class="container px-5 my-5">
                         <div class="row gx-5">
                             <div class="col-lg-4 mb-5 mb-lg-0">
@@ -125,9 +129,7 @@
     <!-- Custom scripts for all pages-->
     <script src="https://cdn.jsdelivr.net/npm/startbootstrap-sb-admin-2@4.1.4/js/sb-admin-2.min.js"></script>
 
-    <!-- Page level plugins -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js" integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+  
 </body>
 
 </html>
