--- a/core-node/quartapp/templates/index.html
+++ b/core-node/quartapp/templates/index.html
@@ -66,8 +66,8 @@
                 </div>
 
                 <div class="text-center">
-                    <a class="btn btn-primary" href="{{ url_for_security('register') }}" role="button">Create an Account!</a>
-                    <a class="btn btn-primary" href="{{ url_for_security('login') }}" role="button">Login</a>
+                    <a class="btn btn-primary" href="" role="button">Create an Account!</a>
+                    <a class="btn btn-primary" href="" role="button">Login</a>
                 </div>
                 
             </div>
