--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -431,9 +431,9 @@
         });
 
         $(function() {
-          $('#probeRefesh').on('click', function(e) {
+          $('#probeinfo').on('click', function(e) {
             e.preventDefault();
-            $.getJSON('/allprobes', // Send input as a parameter
+            $.getJSON('/all_probes', // Send input as a parameter
                 function(data) {
                     alert(data.result);  // Display the result from the server
                     //const tableBody = document.querySelector('#dataTable tbody');
