--- a/core-node/quartapp/templates/probemgr.html
+++ b/core-node/quartapp/templates/probemgr.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<button id="probeRefresh" class="btn btn-primary">
+<button id="probeinfo" class="btn btn-primary">
     <i class="fas fa-search fa-sm"></i> Refresh Probe(s) List
 </button>
 
