--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -433,16 +433,11 @@
         $(function() {
           $('#probeinfo').on('click', function(e) {
             e.preventDefault();
-            $.getJSON('/all_probes', // Send input as a parameter
-                function(data) {
-                    alert(data.result);  // Display the result from the server
-                    //const tableBody = document.querySelector('#dataTable tbody');
-                    //tableBody.innerHTML = '';
-                    //const row = document.createElement('tr');
-                        
-                    //row.innerHTML = `<td>${}</td><td>${}</td><td><button onclick="" class="btn btn-primary">Connection Check</button></td>`;
-                    //tableBody.appendChild(row);
-                }
+            $.getJSON('/all_probes',
+                $.each(item, function(index){
+                    alert(item[index])
+                })
+                
             );
             return false;
           });
