--- a/core-node/quartapp/templates/probemgr.html
+++ b/core-node/quartapp/templates/probemgr.html
@@ -17,7 +17,7 @@
             <th>Actions</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="probetb">
         <!-- Data will be inserted here by JavaScript -->
     </tbody>                  
 </table>
