--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -442,23 +442,16 @@
           });
         });
 
-        const probeTableBody = document.getElementById('probetb');
-
-        probeTableBody.addEventListener("click", (event) => {
-            if(event.target.tagName === 'BUTTON') {
-                $(function() {
-                    e.preventDefault()
-                    $.getJSON('/background_process_test',
-                            function(data) {
-                                alert(data)
+        $("#probeact").click(function(){ 
+            e.preventDefault()
+            $.getJSON('/background_process_test',
+                function(data) {
+                    alert(data)
                         //do nothing
                         
-                    });
-                    return false;
-                    
                 });
-            }
-        });
+                return false;
+         });
 
       </script>
 
