--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -425,6 +425,11 @@
                             <td>${probe.id}</td>
                             <td>${probe.hst_nm}</td>
                             <td>${probe.ip}</td>
+                            <td>
+                                <button class="btn btn-primary">
+                                    Connection Check
+                                </button>
+                            </td>
                         </tr>
                     `;
                     tableBody.append(row);
@@ -461,6 +466,26 @@
             });
 
             return false;
+        });
+
+        $('#dataTable tbody tr').on('click', '.button', function(){
+
+            e.preventDefault();
+            const selectedRowData = $('#dataTable tr.selected').data(); // Retrieve data from the selected row
+            
+            if (!selectedRowData) {
+                alert('Please select a row before submitting!');
+                return false;
+            }
+            
+            // Sending selected row data to the server
+            $.getJSON('/background_process_test', function (response) {
+                alert(response.data); // Display the result from the server
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+                alert(`Failed to send data: ${textStatus} - ${errorThrown}`);
+            });
+
+
         });
 
        
