--- a/core-node/quartapp/templates/probemgr.html
+++ b/core-node/quartapp/templates/probemgr.html
@@ -19,9 +19,10 @@
                 <th>ID</th>
                 <th>Hostname</th>
                 <th>IP</th>
+                <th>Action</th>
             </tr>
         </thead>
-        <tbody id="probetb">
+        <tbody>
             <!-- Data will be inserted here by JavaScript -->
         </tbody>                  
     </table>
