--- a/core-node/quartapp/templates/security/register_user.html
+++ b/core-node/quartapp/templates/security/register_user.html
@@ -2,23 +2,40 @@
 
 {% block content %}
 
-<form class="user" action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
-    {{ register_user_form.hidden_tag() }}
+<form class="user">
+    <div class="form-group row">
+        <div class="col-sm-6 mb-3 mb-sm-0">
+            <input type="text" class="form-control form-control-user" id="exampleFirstName"
+                placeholder="First Name">
+        </div>
+        <div class="col-sm-6">
+            <input type="text" class="form-control form-control-user" id="exampleLastName"
+                placeholder="Last Name">
+        </div>
+    </div>
     <div class="form-group">
-        {{ render_field_with_errors(register_user_form.email) }}
+        <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+            placeholder="Email Address">
     </div>
     <div class="form-group row">
         <div class="col-sm-6 mb-3 mb-sm-0">
-            {{ render_field_with_errors(register_user_form.password) }}
+            <input type="password" class="form-control form-control-user"
+                id="exampleInputPassword" placeholder="Password">
         </div>
         <div class="col-sm-6">
-            {% if register_user_form.password_confirm %}
-                {{ render_field_with_errors(register_user_form.password_confirm) }}
-            {% endif %}
+            <input type="password" class="form-control form-control-user"
+                id="exampleRepeatPassword" placeholder="Repeat Password">
         </div>
     </div>
-    {{ render_field(register_user_form.submit) }}
+    <a href="login.html" class="btn btn-primary btn-user btn-block">
+        Register Account
+    </a>
     <hr>
-    <a class="btn btn-primary" href="{{ url_for_security('login') }}" role="button">Login</a>
+    <a href="index.html" class="btn btn-google btn-user btn-block">
+        <i class="fab fa-google fa-fw"></i> Register with Google
+    </a>
+    <a href="index.html" class="btn btn-facebook btn-user btn-block">
+        <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
+    </a>
 </form>
 {% endblock %}
