--- a/core-node/quartapp/templates/index_base.html
+++ b/core-node/quartapp/templates/index_base.html
@@ -39,7 +39,7 @@
 
                 <!-- Topbar -->
                 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-
+                    <span class="navbar-brand mb-0 h1">netsumap</span>
                 </nav>
                 <!-- End of Topbar -->
 
